--- a/leanchat/src/main/res/layout/main_activity.xml
+++ b/leanchat/src/main/res/layout/main_activity.xml
@@ -16,6 +16,21 @@
 
 
         <Button
+            android:id="@+id/btn_web"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:drawableTop="@drawable/tabbar_discover"
+            android:onClick="onTabSelect"
+            android:paddingBottom="2dip"
+            android:paddingTop="7dip"
+            android:scaleType="matrix"
+            android:text="web"
+            android:textColor="@drawable/tab_textcolor"
+            android:textSize="12sp" />
+
+        <Button
             android:id="@+id/btn_discover"
             android:layout_width="0dp"
             android:layout_height="match_parent"
