--- a/leanchat/src/main/res/layout/send_mes_web.xml
+++ b/leanchat/src/main/res/layout/send_mes_web.xml
@@ -1,12 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/common_header_layout" />
 
-    <TextView
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/line1t"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="测试"/>
+
+        <EditText
+            android:id="@+id/line1e"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint=""/>
+
+    </LinearLayout>
+
+    <include layout="@layout/linelayout" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/line2t"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="测试"
+            android:textColor="#000000"/>
+
+        <EditText
+            android:id="@+id/line2e"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint=""/>
+
+    </LinearLayout>
+
+    <include layout="@layout/linelayout" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/line3t"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ceshi"/>
+
+        <EditText
+            android:id="@+id/line3e"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint=""/>
+
+    </LinearLayout>
+
+    <include layout="@layout/linelayout" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/line4t"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ceshi"/>
+
+        <EditText
+            android:id="@+id/line4e"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint=""/>
+
+    </LinearLayout>
+
+    <include layout="@layout/linelayout" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/line5t"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ceshi"/>
+
+        <EditText
+            android:id="@+id/line5e"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint=""/>
+
+    </LinearLayout>
+
+    <include layout="@layout/linelayout" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/line6t"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ceshi"/>
+
+        <EditText
+            android:id="@+id/line6e"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint=""/>
+
+    </LinearLayout>
+
+    <include layout="@layout/linelayout" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/line7t"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="测试"/>
+
+        <EditText
+            android:id="@+id/line7e"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="测试用的"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <include layout="@layout/linelayout" />
+
+    <Button
+        android:id="@+id/sendbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="hello web"/>
+        android:layout_gravity="center"
+        android:background="@color/entry_blue"
+        android:text="发布"/>
+
+
 
 </LinearLayout>
