--- a/leanchat/src/main/res/layout/activity_web_site.xml
+++ b/leanchat/src/main/res/layout/activity_web_site.xml
@@ -1,55 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activity.WebSiteActivity"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="center"
-        android:src="@drawable/photo"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:text="时间："/>
-
-    <include layout="@layout/linelayout" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:text="地点："/>
-
-    <include layout="@layout/linelayout" />
-
-    <com.baidu.mapapi.map.MapView
-        android:id="@+id/mymapview"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:clickable="true">
-    </com.baidu.mapapi.map.MapView>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="人物："/>
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:padding="20dp">
 
-    <include layout="@layout/linelayout" />
+            <TextView
+                android:id="@+id/name_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="name"
+                android:textSize="16sp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:text="事件："/>
+            <com.baidu.mapapi.map.MapView
+                android:id="@+id/mymapview"
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
 
-    <include layout="@layout/linelayout" />
+            </com.baidu.mapapi.map.MapView>
+
+            <TextView
+                android:id="@+id/description_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/name_detail"
+                android:layout_marginTop="5dp"
+                android:text="description"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="14sp"/>
+
+            <ImageView
+                android:layout_marginTop="5dp"
+                android:id="@+id/image_detail"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="fitStart"
+                android:layout_below="@+id/description_detail"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
