--- a/leanchat/src/main/res/layout/send_mes_web.xml
+++ b/leanchat/src/main/res/layout/send_mes_web.xml
@@ -1,141 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.avoscloud.chat.activity.SendMsgWeb">
 
-    <include layout="@layout/common_header_layout" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/line1t"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="时间："/>
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/line1e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint=""/>
+            <EditText
+                android:id="@+id/edittext_title_publish"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/cardview_dark_background"
+                android:hint="标题"/>
 
-    </LinearLayout>
+            <EditText
+                android:gravity="top"
+                android:id="@+id/edittext_discription_publish"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/cardview_dark_background"
+                android:hint="@string/goods_discription"
+                android:minHeight="66dp"/>
 
-    <include layout="@layout/linelayout" />
+            <EditText
+                android:id="@+id/edittext_price_publish"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/cardview_dark_background"
+                android:hint="金额"
+                android:inputType="number"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/line2t"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="地点："
-            android:textColor="#000000"/>
+                <Button
+                    android:id="@+id/button_select_publish"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:text="@string/seletct_a_pic"
+                    android:textStyle="bold"/>
 
-        <EditText
-            android:id="@+id/line2e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint=""/>
+                <ImageView
+                    android:id="@+id/imageview_select_publish"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:src="@android:drawable/screen_background_light_transparent"/>
 
-    </LinearLayout>
+            </LinearLayout>
 
-    <include layout="@layout/linelayout" />
+            <Button
+                android:id="@+id/button_submit_publish"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/submit"
+                android:textStyle="bold"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/line3t"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="人物："/>
+    </ScrollView>
 
-        <EditText
-            android:id="@+id/line3e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint=""/>
-
-    </LinearLayout>
-
-    <include layout="@layout/linelayout" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/line4t"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="事件"/>
-
-        <EditText
-            android:id="@+id/line4e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint=""/>
-
-    </LinearLayout>
-
-    <include layout="@layout/linelayout" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/line5t"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="价格"/>
-
-        <EditText
-            android:id="@+id/line5e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint=""/>
-
-    </LinearLayout>
-
-    <include layout="@layout/linelayout" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/line6t"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="额外要求"/>
-
-        <EditText
-            android:id="@+id/line6e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint=""/>
-
-    </LinearLayout>
-
-    <include layout="@layout/linelayout" />
-
-    <Button
-        android:id="@+id/sendbutton"
+    <ProgressBar
+        android:id="@+id/mProgess"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@color/entry_blue"
-        android:text="发布"/>
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
-
-
-</LinearLayout>
+</RelativeLayout>
